--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,9 @@ development:
   <<: *default
   database: postgres
   username: postgres
-  password: 1432
+  password: admin
   host: localhost
-  port: 5433
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -26,9 +26,9 @@ test:
   <<: *default
   database: postgres
   username: postgres
-  password: 1432
+  password: admin
   host: localhost
-  port: 5433
+  port: 5432
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -54,4 +54,4 @@ production:
   database: postgres
   username: postgres
   password: <%= ENV['1234'] %>
-  port: 5433
+  port: 5432
