--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
 
 development:
   <<: *default
-  database: postgres
+  database: blog
   username: postgres
   password: admin
   host: localhost
@@ -24,7 +24,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: postgres
+  database: blog
   username: postgres
   password: admin
   host: localhost
@@ -51,7 +51,7 @@ test:
 #
 production:
   <<: *default
-  database: postgres
+  database: blog
   username: postgres
   password: <%= ENV['1234'] %>
   port: 5432
